# VisionAI-ClipsMaster

./: .coveragerc  .gitignore  .gitignore_optimized  .gitlocalize.yml  .pre-commit-config.yaml  BACKUP_RECORD_UI_REALTIME_CHECK.md  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  COMPLETE_E2E_INTEGRATION_TEST_REPORT.md  COMPREHENSIVE_CORE_FUNCTIONALITY_VERIFICATION_REPORT.md  COMPREHENSIVE_CORE_VIDEO_PROCESSING_TEST_REPORT.md  COMPREHENSIVE_END_TO_END_TEST_REPORT.md  COMPREHENSIVE_FIX_FINAL_REPORT.md  COMPREHENSIVE_FUNCTIONALITY_VERIFICATION_REPORT.md  COMPREHENSIVE_FUNCTIONAL_VALIDATION_REPORT.md  COMPREHENSIVE_REAL_WORLD_E2E_TEST_REPORT.md  COMPREHENSIVE_TEST_COMPLETION_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  COMPREHENSIVE_TRAINING_FUNCTIONALITY_TEST_REPORT.md  CONTRIBUTING.md  CORE_FUNCTIONALITY_VERIFICATION_REPORT.md  CPU_GPU_COMPATIBILITY_COMPLETE_GUIDE.md  CSS_Compatibility_Cleaner.py  ChineseUiLauncher.py  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  FAQ.md  FINAL_COMPREHENSIVE_ANALYSIS_AND_FIX_REPORT.md  FINAL_COMPREHENSIVE_E2E_TEST_REPORT.md  FINAL_COMPREHENSIVE_TEST_REPORT.md  FINAL_COMPREHENSIVE_VALIDATION_REPORT.md  FINAL_COMPREHENSIVE_VERIFICATION_REPORT.md  FINAL_COMPREHENSIVE_VERIFICATION_SUMMARY.md  FINAL_CORE_FUNCTIONALITY_VERIFICATION_REPORT.md  FINAL_E2E_INTEGRATION_TEST_REPORT.md  FINAL_EXPORT_WORKFLOW_FIX_REPORT_1753607819.json  (+829 more)
.github/: description.md  quality_gate_config.json
backup_before_git_reset/: optimized_quick_launcher.py  startup_benchmark.py  startup_time_optimizer.py
backup_simulation_20250718_210803/: en_trainer.py  model_fine_tuner.py  zh_trainer.py
cleanup_backup_20250725_074200/: CHANGELOG.md  COMPLETE_WORKFLOW_TEST_FINAL_REPORT.md  COMPREHENSIVE_WORKFLOW_TEST_SUMMARY.md  CORE_FUNCTIONALITY_FINAL_TEST_REPORT.md  DOCUMENTATION_INDEX.md  Documentation_Completion_Report.md  FINAL_COMPREHENSIVE_TEST_REPORT.md  FINAL_VALIDATION_SUMMARY.md  Font_Revert_Report.md  GPU_ACCELERATION_IMPLEMENTATION_SUMMARY.md  GPU_DETECTION_DISCRETE_ONLY_SUMMARY.md  GPU_DIALOG_SIMPLIFICATION_SUMMARY.md  GPU_VIDEO_ACCELERATION_GUIDE.md  GitHub_Repository_Verification_Report.md  INSTALLATION.md  JIANYING_COMPATIBILITY_FIX_SUMMARY.md  JIANYING_PROJECT_USAGE_GUIDE.md  README.md  README_Update_Report.md  README_smart_downloader_ui_optimization.md  SMART_DOWNLOADER_VALIDATION_REPORT.md  TESTING_GUIDE.md  TEST_MODULE_SUMMARY.md  TRAINING_VALIDATION_SYSTEM_REPORT.md  TROUBLESHOOTING.md  UI_Font_Scaling_Fix_Report.md  USER_GUIDE.md  VisionAI_ClipsMaster_AI_Model_Impact_Analysis.md  VisionAI_ClipsMaster_Complete_Test_Summary.md  VisionAI_ClipsMaster_Comprehensive_Test_Report.md  VisionAI_ClipsMaster_Core_Functionality_Test_Report.md  VisionAI_ClipsMaster_Documentation_Correction_Report.md  VisionAI_ClipsMaster_Dynamic_Downloader_Implementation_Report.md  VisionAI_ClipsMaster_Final_Optimization_Report.md  VisionAI_ClipsMaster_Final_Test_Report_20250725.md  VisionAI_ClipsMaster_Git_Reinit_Final_Report.md  VisionAI_ClipsMaster_Size_Optimization_Plan.md  VisionAI_ClipsMaster_Tab_Specific_UI_RealTime_Update_Report.md  VisionAI_ClipsMaster_Test_Improvement_Recommendations.md  VisionAI_ClipsMaster_Video_Workflow_Test_Report.md  (+23 more)
config/: alert_config.json  ar_guides.json  chaos_config.yaml  cognitive_load.json  module_usage.json  ui_settings.json
configs/: README_XSD_SCHEMAS.md  accessibility_config.json  alert_config.yaml  clip_settings.json  compression_layers.yaml  continuity_rules.yaml  culture_rules.yaml  dashboard_config.json  data_lake.yaml  docs_version.json  dynamic_intensity.yaml  emotion_focus.yaml  emotion_intensity.yaml  emotion_resonance.yaml  error_dashboard.json  error_solutions.json  export_policy.py  export_policy.yaml  ffmpeg_config.json  hardware_strategy.json  immersion_config.yaml  interpretability.yaml  jianying_v2.xsd  jianying_v3.xsd  language_detector.yaml  legal_templates.yaml  legal_updater.json  locale_config.json  low_mem_env.yaml  memory_fuse.yaml  memory_optimization.yaml  model_config.yaml  monitor_metrics.yaml  multimodal_config.yaml  optimization.json  optimized_quantization.json  param_matrix.yaml  pattern_evaluation.yaml  pattern_updater.yaml  performance_tips.json  (+22 more)
core/: effect_validator.py  event_tracer.py  recovery_manager.py  safe_executor.py
data/: README.md  demo_version_db.json  progress_history.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: API_REFERENCE.md  ASSEMBLY_OPTIMIZATION.md  ATTRIBUTE_DOWNGRADER.md  AUDIT_TRAIL.md  CI_CD_PIPELINE.md  CODE_OF_CONDUCT.md  CUSTOM_LEGAL_TEXT.md  DASHBOARD_INTEGRATION.md  DEVELOPMENT_STEPS.md  ERROR_HANDLING.md  EULA.md  FRAMEWORK_VALIDATION.md  GPU_ACCELERATION.md  HARDWARE_COMPATIBILITY.md  HISTORY_ANALYSIS.md  INPUT_METHOD_GUIDE.md  LANGUAGE_HOT_RELOAD_GUIDE.md  LEGAL_AUDIT_LOGGING_SUMMARY.md  LEGAL_UPDATER.md  LOCALIZATION_GUIDE.md  LOGGING.md  MEMORY_DASHBOARD.md  MULTILINGUAL.md  Makefile  ROLLBACK_MECHANISM.md  SECURITY_ACCESS_CONTROL.md  SELF_CHECK_COMPLETION.md  SMART_DOWNLOADER_FIX_GUIDE.md  STRUCTURED_LOGGING.md  TESTING.md  TEST_SECURITY.md  TEXT_DIRECTION_SUPPORT.md  THIRD-PARTY.md  TIMECODE_VALIDATOR_IMPLEMENTATION.md  TRAINING_MODULE_GUIDE.md  UI_DEVELOPMENT_HISTORY.md  USER_GUIDE.md  VERSION_FEATURES.md  adaptive_rendering.md  anchor_detection.md  (+36 more)
examples/: README.md  assembly_optimization_demo.py  attribute_downgrader_demo.py  batch_export_demo.py  causality_demo.py  compressed_memory_demo.py  compression_core_demo.py  compression_monitor_demo.py  conflict_resolution_demo.py  cultural_validator_demo.py  culture_adapter_demo.py  (+52 more)
src/hardware/: CMakeLists.txt  README.md  README_GPU_FALLBACK.md  README_PIPELINE_OPT.md  __init__.py  assembly_kernels.cpp  assembly_kernels.h  assembly_wrapper.py  compute_offloader.py  gpu_fallback.py  memory_aligner.py  microarch_tuner.py  optimization_router.py  parallel_scheduler.py  performance_verification.py  pipeline_interface.py  pipeline_opt.asm  pipeline_opt.c  pipeline_opt.h  pipeline_wrapper.py  simd_kernels.cpp  simd_kernels.h  simd_utils.py  simd_wrapper.py
(+2006 files in other folders)
